# auto-feedback-backend

./: .env.example  .gitignore  AFG_SCHEMA.sql  README.md  __init__.py  ai.py  app.py  auth.py  base.html  config.py  create_tables.py  file_routes.py  final_prompt_structures.md  index.html  login.html  new_prompt_templates.md  playground_testing_guide.md  prompt_templates.md  pyproject.toml  requirements.txt  routes.py  rubrics.csv  run.py  student_performance_list.csv
app/: __init__.py  api.py  config.py  models.py  routes.py
app/nlp/: __init__.py  feedback_generator.py  prompt_templates.py
app/templates/: base.html  index.html  result.html
app/utils/: validators.py
data/: README.md
